<resources>
    <string name="app_name">Ihome</string>
    <string name="left_second">( %ds )</string>
    <string name="lock_prefix">CrAM</string>

    <string name="device_connected">Connected</string>
    <string name="device_connecting">Connecting</string>
    <string name="device_disconnected">Disconnected</string>
    <string name="device_connect">connect</string>

    <!--LoginActivity-->
    <string name="login_mobile">Mobile</string>
    <string name="login_verification">V Code</string>
    <string name="login">Login</string>
    <string name="login_wrongMobile">Please re-enter your phone number</string>
    <string name="login_emptyVerification">Please enter the verification code</string>
    <string name="login_wrongVerification">Please re-enter the verification code</string>
    <string name="login_getVerification">Verify Code</string>
    <string name="login_successGetVerification">Successful</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MainActivity -->
    <string name="format_user_balance">%.2f</string>

    <!-- PublishParkingActivity -->
    <string name="republish_format">republish %s</string>

    <!-- Avatar -->
    <string name="avatar_photo">Take Photo</string>
    <string name="avatar_gallery">Gallery</string>

    <!-- Common -->
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <!-- UserLockFragment -->
    <string name="modify_password">Modify Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Please Confirm</string>

    <string name="order_owner_orderId">OrderId: %d</string>
    <string name="title_activity_join_owner">JoinOwnerActivity</string>

</resources>
