<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_modify_password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_password"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/rl_old_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="numberPassword"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:background="@null"
            android:paddingStart="60dp"
            android:layout_alignBaseline="@id/tv_old_password"
            />

    </RelativeLayout>

    <View
        android:id="@+id/separator_old_password"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/button_bord"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/rl_new_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="numberPassword"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:background="@null"
            android:paddingStart="60dp"
            android:layout_alignBaseline="@id/tv_new_password"
            />

    </RelativeLayout>

    <View
        android:id="@+id/separator_new_password"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/button_bord"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/rl_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="numberPassword"
            android:textSize="12sp"
            android:textColor="@color/major_text"
            android:background="@null"
            android:paddingStart="60dp"
            android:layout_alignBaseline="@id/tv_confirm_password"
            />

    </RelativeLayout>

    <View
        android:id="@+id/separator_confirm_password"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/button_bord"
        android:layout_gravity="center_horizontal"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_bord"
        android:layout_marginTop="24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/major_text"
            android:gravity="center"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/button_bord"
            />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/major_text"
            android:gravity="center"
            />

    </LinearLayout>

</LinearLayout>